src/test/ui/enum-discriminant/issue-70453-generics-in-discr-ice.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-70453-generics-in-discr-ice.rs:10:12
   |
LL |     Some = std::mem::size_of::<T>(),
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0392]: parameter `T` is never used
  --> $DIR/issue-70453-generics-in-discr-ice.rs:7:20
   |
LL | enum MyWeirdOption<T> {
   |                    ^ unused parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
